06_rect/grade.txt
Grading at Thu Jul  9 16:53:31 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:36:23: error: ‘rectangle {aka struct rect}’ has no member named ‘w’
   int r1fx = r1.x + r1.w, r1fy = r1.y + r1.h; 
                       ^
rectangle.c:36:43: error: ‘rectangle {aka struct rect}’ has no member named ‘h’
   int r1fx = r1.x + r1.w, r1fy = r1.y + r1.h; 
                                           ^
rectangle.c:37:23: error: ‘rectangle {aka struct rect}’ has no member named ‘w’
   int r2fx = r2.x + r2.w, r2fy = r2.y + r2.h;
                       ^
rectangle.c:37:43: error: ‘rectangle {aka struct rect}’ has no member named ‘h’
   int r2fx = r2.x + r2.w, r2fy = r2.y + r2.h;
                                           ^
rectangle.c:39:82: error: expected ‘)’ before ‘{’ token
   if ((max(r1.x, r2.x) > min(r1fx, r2fx)) || (max(r1.y, r2.y) > min(r1fy, r2fy)) {
                                                                                  ^
rectangle.c:57:1: error: expected expression before ‘}’ token
 }
 ^
rectangle.c:35:13: error: unused variable ‘rInt’ [-Werror=unused-variable]
   rectangle rInt;
             ^
rectangle.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
